k8s-nodejs-premisse.yaml
kind: Namespace
apiVersion: v1
metadata:
 name: nodejs
spec:
 finalizers:
  - kubernetes
---
apiVersion: v1
kind: Service
metadata:
 name: nodejs-service
 namespace: nodejs
 labels:
   app: nodejs
spec:
 type: LoadBalancer
 selector:
   app: nodejs
 ports:
  - port: 8080
    targetPort: 3000
    #nodePort: 30523
---
apiVersion: apps/v1
kind: Deployment
metadata:
 labels:
   app: nodejs
 name: nodejs
 namespace: nodejs
 annotations:  
   template.alpha.openshift.io/wait-for-ready: 'true'
spec:
 replicas: 1
 selector:
  matchLabels:
   app: nodejs
 template:
  metadata:
   labels:
    app: nodejs
  spec:
   imagePullSecrets:
    - name: regcred
   containers: 
    - name: nodejs
      image: 129.213.187.72:5003/nodejs/k8s-nodejs
      resources:
        limits:
          cpu: '1'
          memory: 1Gi
        requests:
          cpu: 100m
          memory: 150Mi
      ports:
       - containerPort: 3000
      livenessProbe:
        httpGet:
          path: /
          port: 3000
          scheme: HTTP
        initialDelaySeconds: 10
        timeoutSeconds: 2
        periodSeconds: 10
        successThreshold: 1
        failureThreshold: 3
      readinessProbe:
        httpGet:
          path: /
          port: 3000
          scheme: HTTP
        initialDelaySeconds: 30
        timeoutSeconds: 2
        periodSeconds: 10
        successThreshold: 1
        failureThreshold: 3
