aks-nodejs-green.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    #kubernetes.io/ingress.class: addon-http-application-routing
    kubernetes.io/ingress.class: nginx
  name: green-nodejs
  namespace: nodejs
  labels:
    app: nodejs
    role: green
spec:
  rules:
    - host: green-nodejs.aks.linux4sysadmin.com.br
      http:
        paths:
          - backend:
              serviceName: green-nodejs-service
              servicePort: 8080
            path: /
  tls:
    - hosts:
        - green-nodejs.aks.linux4sysadmin.com.br
---
# Green Environment
apiVersion: v1
kind: Service
metadata:
 name: green-nodejs-service
 namespace: nodejs
 labels:
   app: nodejs
   role: green
spec:
 selector:
   app: nodejs
   role: green
 ports:
  - port: 8080
    targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
 labels:
   app: nodejs
   role: green
 name: green-nodejs
 namespace: nodejs
 annotations:  
   template.alpha.openshift.io/wait-for-ready: 'true'
spec:
 replicas: 1
 selector:
  matchLabels:
   app: nodejs
   role: green
 template:
  metadata:
   labels:
    app: nodejs
    role: green
  spec:
   imagePullSecrets:
    - name: acrregcred
   containers: 
    - name: nodejs
      image: cmotta2016.azurecr.io/k8s-nodejs
      imagePullPolicy: IfNotPresent
      resources:
        limits:
          cpu: '1'
          memory: 1Gi
        requests:
          cpu: 100m
          memory: 50Mi
      ports:
       - containerPort: 3000
      livenessProbe:
        httpGet:
          path: /
          port: 3000
          scheme: HTTP
        initialDelaySeconds: 10
        timeoutSeconds: 2
        periodSeconds: 10
        successThreshold: 1
        failureThreshold: 3
      readinessProbe:
        httpGet:
          path: /
          port: 3000
          scheme: HTTP
        initialDelaySeconds: 30
        timeoutSeconds: 2
        periodSeconds: 10
        successThreshold: 1
        failureThreshold: 3
