aks-nodejs.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    #kubernetes.io/ingress.class: addon-http-application-routing
    kubernetes.io/ingress.class: nginx
  name: nodejs
  labels:
    app: nodejs
    env: qa
spec:
  rules:
    - host: nodejs-qa.oisva.azure.msdigital.pro
      http:
        paths:
          - backend:
              serviceName: nodejs-service
              servicePort: 8080
            path: /
  tls:
    - hosts:
        - nodejs-qa.oisva.azure.msdigital.pro
---
apiVersion: v1
kind: Service
metadata:
 name: nodejs-service
 labels:
   app: nodejs
   env: qa
spec:
 selector:
   app: nodejs
   env: qa
 ports:
  - port: 8080
    targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
 labels:
   app: nodejs
   env: qa
 name: nodejs
 annotations:  
   template.alpha.openshift.io/wait-for-ready: 'true'
spec:
 replicas: 1
 selector:
  matchLabels:
   app: nodejs
   env: qa
 template:
  metadata:
   labels:
    app: nodejs
    env: qa
  spec:
   imagePullSecrets:
    - name: acr-credentials
   containers: 
    - name: nodejs
      image: " "
      imagePullPolicy: Always
      resources:
        limits:
          cpu: 250m
          memory: 512Mi
        requests:
          cpu: 100m
          memory: 256Mi
      ports:
       - containerPort: 3000
      livenessProbe:
        httpGet:
          path: /
          port: 3000
          scheme: HTTP
        initialDelaySeconds: 10
        timeoutSeconds: 2
        periodSeconds: 10
        successThreshold: 1
        failureThreshold: 3
      readinessProbe:
        httpGet:
          path: /
          port: 3000
          scheme: HTTP
        initialDelaySeconds: 30
        timeoutSeconds: 2
        periodSeconds: 10
        successThreshold: 1
        failureThreshold: 3
