deployment.yml
apiVersion: v1
kind: Service
metadata:
 name: "@REPLACE_APP@"
 namespace: "@REPLACE_APP@"
 labels:
   app: "@REPLACE_APP@"
   environment: "@REPLACE_ENV@"
spec:
 selector:
   app: "@REPLACE_APP@"
   environment: "@REPLACE_ENV@"
 ports:
   - port: 80
     targetPort: 3000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: "@REPLACE_APP@-ingress-rule"
  namespace: "@REPLACE_APP@"
spec:
  rules:
    - host: "pocjoicedevops@REPLACE_ENV@.oi.com.br"
      http:
        paths:
          - backend:
              serviceName: "@REPLACE_APP@"
              servicePort: 80
            path: /
---
apiVersion: apps/v1
kind: Deployment
metadata:
 labels:
   app: "@REPLACE_APP@"
   environment: "@REPLACE_ENV@"
 name: "@REPLACE_APP@"
 namespace: "@REPLACE_APP@"
spec:
 replicas: 1
 selector:
  matchLabels:
   app: "@REPLACE_APP@"
   environment: "@REPLACE_ENV@"
 template:
  metadata:
   labels:
    app: "@REPLACE_APP@"
    environment: "@REPLACE_ENV@"
  spec:
#   imagePullSecrets:
#    - name: privregcred
   containers:
    - name: "@REPLACE_APP@"
      image: "@REPLACE_IMG@"
      resources:
        limits:
          cpu: '1'
          memory: 1Gi
        requests:
          cpu: 250m
          memory: 256Mi
      ports:
       - containerPort: 3000
      livenessProbe:
        httpGet:
          path: /
          port: 3000
          scheme: HTTP
        initialDelaySeconds: 10
        timeoutSeconds: 2
        periodSeconds: 10
        successThreshold: 1
        failureThreshold: 3
      readinessProbe:
        httpGet:
          path: /
          port: 3000
          scheme: HTTP
        initialDelaySeconds: 30
        timeoutSeconds: 2
        periodSeconds: 10
        successThreshold: 1
        failureThreshold: 3
