ingress.yaml
kind: Namespace
apiVersion: v1
metadata:
 name: nodejs
spec:
 finalizers:
  - kubernetes
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    #kubernetes.io/ingress.class: addon-http-application-routing
    kubernetes.io/ingress.class: nginx
  name: nodejs
  namespace: nodejs
  labels:
    app: nodejs
    role: principal
spec:
  rules:
    - host: nodejs.aks.linux4sysadmin.com.br
      http:
        paths:
          - backend:
              serviceName: nodejs-service
              servicePort: 8080
            path: /
  tls:
    - hosts:
        - nodejs.aks.linux4sysadmin.com.br
---
apiVersion: v1
kind: Service
metadata:
 name: nodejs-service
 namespace: nodejs
 labels:
   app: nodejs
   role: principal
spec:
 selector:
   app: nodejs
   role: blue
 ports:
  - port: 8080
    targetPort: 3000
