template-nodejs.yml
apiVersion: v1
kind: Template
labels:
  template: "${NAME}"
metadata:
  name: "${NAME}"
objects:
- apiVersion: v1
  kind: Route
  metadata:
    labels:
      app: ${LABEL}
      name: "principal"
    name: ${NAME}
  spec:
    alternateBackends:
    - name: ${NAME}-green
      weight: 0
    to:
      kind: Service
      name: ${NAME}-blue
      weight: 100
### Blue Objects
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: "${LABEL}"
    name: ${NAME}-blue
  spec:
    ports:
    - name: web
      port: 8080
      protocol: TCP
      targetPort: 3000
    selector:
      app: "${NAME}"
      deploymentconfig: ${NAME}-blue
      name: ${NAME}-blue
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: "${LABEL}"
    name: blue-${NAME}
  spec:
    port:
      targetPort: web
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: edge
    to:
      kind: Service
      name: ${NAME}-blue
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: "${LABEL}"
    name: ${NAME}-blue
    annotations:  
      template.alpha.openshift.io/wait-for-ready: 'true'
  spec:
    strategy:
      type: "Rolling"
    triggers:
    - type: ImageChange
      imageChangeParams:
        automatic: false
        containerNames:
        - "${NAME}"
        from: 
          kind: ImageStreamTag
          name: "${NAME}:blue"
          namespace: "${REPOSITORY}"
    - type: ConfigChange
    replicas: 1
    selector:
      app: "${NAME}"
      deploymentconfig: "${NAME}"
      name: ${NAME}-blue
    template:
      metadata:
        labels:
          app: "${LABEL}"
          deploymentconfig: "${NAME}"
          name: ${NAME}-blue
      spec:
        containers:
        - image: " "
          name: "${NAME}"
          resources:
            limits:
              cpu: 250m
              memory: 2Gi
            requests:
              cpu: 250m
              memory: 1Gi
          ports:
            - containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 2
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
- apiVersion: autoscaling/v1
  kind: HorizontalPodAutoscaler
  metadata:
    labels:
      app: "${LABEL}"
    name: ${NAME}-blue
  spec:
    maxReplicas: 10
    minReplicas: 3
    scaleTargetRef:
      apiVersion: v1
      kind: DeploymentConfig
      name: "${NAME}-blue"
    targetCPUUtilizationPercentage: 80
### Green Objects
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: "${LABEL}"
    name: ${NAME}-green
  spec:
    ports:
    - name: web
      port: 8080
      protocol: TCP
      targetPort: 3000
    selector:
      app: "${NAME}"
      deploymentconfig: ${NAME}-green
      name: ${NAME}-green
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: "${LABEL}"
    name: green-${NAME}
  spec:
    port:
      targetPort: web
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: edge
    to:
      kind: Service
      name: ${NAME}-green
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: "${LABEL}"
    name: ${NAME}-green
    annotations:  
      template.alpha.openshift.io/wait-for-ready: 'true'
  spec:
    strategy:
      type: "Rolling"
    triggers:
    - type: ImageChange
      imageChangeParams:
        automatic: false
        containerNames:
        - "${NAME}"
        from: 
          kind: ImageStreamTag
          name: "${NAME}:green"
          namespace: "${REPOSITORY}"
    - type: ConfigChange
    replicas: 1
    selector:
      app: "${NAME}"
      deploymentconfig: "${NAME}"
      name: ${NAME}-green
    template:
      metadata:
        labels:
          app: "${LABEL}"
          deploymentconfig: "${NAME}"
          name: ${NAME}-green
      spec:
        containers:
        - image: " "
          name: "${NAME}"
          resources:
            limits:
              cpu: 250m
              memory: 2Gi
            requests:
              cpu: 250m
              memory: 1Gi
          ports:
            - containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 2
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
- apiVersion: autoscaling/v1
  kind: HorizontalPodAutoscaler
  metadata:
    labels:
      app: "${LABEL}"
    name: ${NAME}-green
  spec:
    maxReplicas: 10
    minReplicas: 3
    scaleTargetRef:
      apiVersion: v1
      kind: DeploymentConfig
      name: "${NAME}-green"
    targetCPUUtilizationPercentage: 80
parameters:
- name: NAME
  displayName: Name
  description: The name assigned to all of the frontend objects defined in this template.
  required: true
- name: LABEL
  displayName: App label
  required: true
  #value: marketing-management-v1
- name: REPOSITORY
  displayName: Repository of app image
  required: true
