template-nodejs_v1.yml
apiVersion: v1
kind: Template
labels:
  template: marketing-management-v2
metadata:
  name: marketing-management-v2
objects:
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: "${LABEL}"
    name: "${NAME}"
  spec:
    ports:
    - name: web
      port: 8080
      protocol: TCP
      targetPort: 3000
    selector:
      app: "${NAME}"
      deploymentconfig: "${NAME}"
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: "${LABEL}"
    name: "${NAME}"
  spec:
    port:
      targetPort: web
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: edge
    to:
      kind: Service
      name: "${NAME}"
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: "${LABEL}"
    name: "${NAME}"
    annotations:  
      template.alpha.openshift.io/wait-for-ready: 'true'
  spec:
    strategy:
      type: "Rolling"
    triggers:
    - type: ImageChange
      imageChangeParams:
        automatic: false
        containerNames:
        - "${NAME}"
        from: 
          kind: ImageStreamTag
          name: "${NAME}:latest"
          namespace: "marketing-management-qa"
    - type: ConfigChange
    replicas: 1
    selector:
      app: "${NAME}"
      deploymentconfig: "${NAME}"
    template:
      metadata:
        labels:
          app: "${LABEL}"
          deploymentconfig: "${NAME}"
      spec:
        containers:
        - image: " "
          name: "${NAME}"
          resources:
            limits:
              cpu: '1'
              memory: 1Gi
            requests:
              cpu: 200m
              memory: 1024Mi
          ports:
            - containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 2
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
- apiVersion: autoscaling/v1
  kind: HorizontalPodAutoscaler
  metadata:
    labels:
      app: "${LABEL}"
    name: "${NAME}"
  spec:
    maxReplicas: 3
    minReplicas: 1
    scaleTargetRef:
      apiVersion: v1
      kind: DeploymentConfig
      name: "${NAME}"
    targetCPUUtilizationPercentage: 80
parameters:
- name: NAME
  displayName: Name
  description: The name assigned to all of the frontend objects defined in this template.
  required: true
- name: LABEL
  displayName: App label
  required: true
  value: marketing-management-v1
